fixed portrait layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -731,7 +731,7 @@ footer .footer-left {
   }
 
   .project-item {
-    width: 40%;
+    width: 100%;
   }
 
   /* Contact */
